--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 body{
-    background-color: rgb(62, 75, 75);
+    background-image: url("https://scontent.fdhi1-1.fna.fbcdn.net/v/t39.30808-6/274818499_644262110177158_2738954660756863894_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=e3f864&_nc_ohc=urxTjCZnZZIAX-eKJa6&_nc_ht=scontent.fdhi1-1.fna&oh=00_AfCV-jlHuOcmr-Nk5ecAu451jBPNgI-naDMrNy75O1qQbg&oe=6492297E");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    touch-action: pan-y;
 }
 h1{
     color: rgb(88, 108, 175);
